# KG-Blog

./: .gitignore  README.md  app.py  baml.toml  docker-compose.yml  pyproject.toml  run.sh
baml_src/: clients.baml  main.baml
docs/: blog.md
src/: __init__.py  database_loader.py  extractor.py
templates/: index.html
