[project]
name = "kg-neo4j-baml-blog"
version = "0.1.0"
description = "Knowledge Graph Pipeline using BAML and Neo4j"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "baml-py>=0.214.0",
    "google-genai>=0.2.0",
    "neo4j>=5.0.0",
    "html2text>=2024.2.26",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
